@@ -57,6 +57,7 @@ Christopher Charlier
 Clark Archer
 Clemens Hammacher
 Clement OUDOT
+Clive Brettingham-Moore
 Conor MacNeill
 Craeg Strong
 Craig Cottingham
