@@ -251,6 +251,10 @@
     <last>OUDOT</last>
   </name>
   <name>
+    <first>Clive</first>
+    <last>Brettingham-Moore</last>
+  </name>
+  <name>
     <first>Conor</first>
     <last>MacNeill</last>
   </name>
